--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -2,30 +2,19 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: postgresqldata
-  annotations:
-    pv.kubernetes.io/provisioned-by: file.csi.azure.com
 spec:
   capacity:
-    storage: 100Gi
+    storage: 4Gi
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: azurefile-csi-nfs
+  storageClassName: default
   csi:
-
-    driver: file.csi.azure.com
-    volumeHandle: "PowerPlatform-IOTReporting-dev#usiotreportingdev#us-chirpstack-postgres-data"
-    volumeAttributes:
-      shareName:
-    nodeStageSecretRef:
-      name: azure-file-secret
-      namespace: default
+    driver: disk.csi.azure.com
+    volumeHandle: "/subscriptions/1e4e3cbd-99c6-4435-94f1-a2e7106eefc1/resourceGroups/PowerPlatform-IOTReporting-dev/providers/Microsoft.Compute/disks/us-postgresql-data"  # Disk ID
+    fsType: ext4
   mountOptions:
     - dir_mode=0750
     - file_mode=0750
     - uid=999
     - gid=999
-    - mfsymlinks
-    - cache=strict
-    - nosharesock
-    - nobrl
