Fixed incorrect name for volume mount

--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -37,7 +37,7 @@ spec:
             - mountPath: /var/lib/postgresql/data
               name: postgresqldata
             - mountPath: /var/run/postgresql
-              name: postgresql-run
+              name: postgres-cm1
       containers:
         - name: postgresql
           image: postgres:14-alpine
