--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -11,7 +11,7 @@ spec:
   storageClassName: default
   csi:
     driver: disk.csi.azure.com
-    volumeHandle: "/subscriptions/1e4e3cbd-99c6-4435-94f1-a2e7106eefc1/resourceGroups/PowerPlatform-IOTReporting-dev/providers/Microsoft.Compute/disks/us-postgresql-data"  # Disk ID
+    volumeHandle: "/subscriptions/1e4e3cbd-99c6-4435-94f1-a2e7106eefc1/resourceGroups/PowerPlatform-IOTReporting-dev/providers/Microsoft.Compute/disks/us-postgresql-data"
     fsType: ext4
   mountOptions:
     - dir_mode=0750
