--- a/volumes/postgresqldata-persistentvolumeclaim.yaml
+++ b/volumes/postgresqldata-persistentvolumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgresqldata
+  name: postgresqldata-pvc
 spec:
   accessModes:
     - ReadWriteOnce
