--- a/volumes/postgresqldata-persistentvolumeclaim.yaml
+++ b/volumes/postgresqldata-persistentvolumeclaim.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgresqldata
+  namespace: default
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 4Gi
+  volumeMode: Filesystem
+  volumeName: postgresqldata-pv
   storageClassName: postgres-storage-class
