--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -8,7 +8,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: default
+  storageClassName: postgres-storage-class
   csi:
     driver: disk.csi.azure.com
     volumeHandle: "/subscriptions/1e4e3cbd-99c6-4435-94f1-a2e7106eefc1/resourceGroups/PowerPlatform-IOTReporting-dev/providers/Microsoft.Compute/disks/us-postgresql-data"
