--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -1,18 +1,21 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgresqldata-pv
+  annotations:
+    pv.kubernetes.io/provisioned-by: disk.csi.azure.com
+  name: us-chirpstack-postgres-pv
 spec:
   capacity:
     storage: 4Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: postgres-storage-class
+  storageClassName: managed-csi
   csi:
     driver: disk.csi.azure.com
-    volumeHandle: "/subscriptions/1e4e3cbd-99c6-4435-94f1-a2e7106eefc1/resourceGroups/PowerPlatform-IOTReporting-dev/providers/Microsoft.Compute/disks/us-postgresql-data"
-    fsType: ext4
+    volumeHandle: /subscriptions/1e4e3cbd-99c6-4435-94f1-a2e7106eefc1/resourceGroups/MC_PowerPlatform-IOTReporting-dev_US-IOTReporting-dev_eastus/providers/Microsoft.Compute/disks/us-chirpstack-postgres
+    volumeAttributes:
+      fsType: ext4
   mountOptions:
     - dir_mode=0750
     - file_mode=0750
