incorrect line in postgres persistent volume claim

--- a/volumes/postgresqldata-persistentvolumeclaim.yaml
+++ b/volumes/postgresqldata-persistentvolumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-kind: us-chirpstack-postegres-pvc
+kind: PersistentVolumeClaim
 metadata:
-  name: pvc-azuredisk
+  name: us-chirpstack-postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
