--- a/volumes/postgresqldata-persistentvolumeclaim.yaml
+++ b/volumes/postgresqldata-persistentvolumeclaim.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: us-chirpstack-postgres-pvc
+  name: us-chirpstack-postgres-data
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  storageClassName: azurefile-csi
+  volumeName: us-chirpstack-postgres-data
   resources:
     requests:
       storage: 4Gi
