--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolume
 metadata:
   annotations:
     pv.kubernetes.io/provisioned-by: file.csi.azure.com
-  name: us-chirpstack-postgres-data
+  name: us-chirpstack-postgres
 spec:
   capacity:
     storage: 4Gi
@@ -13,10 +13,10 @@ spec:
   storageClassName: azurefile-csi
   csi:
     driver: file.csi.azure.com
-    volumeHandle: "PowerPlatfor-IOTReporting-dev#usiotreportingdev#us-chirpstack-postgres-data"
+    volumeHandle: "PowerPlatfor-IOTReporting-dev#usiotreportingdev#us-chirpstack-postgres"
     volumeAttributes:
       resourceGroup:
-      shareName: us-chirpstack-postgres-data
+      shareName: us-chirpstack-postgres
     nodeStageSecretRef:
       name: azure-secret
       namespace: default
