--- a/volumes/postgres-storage-class.yaml
+++ b/volumes/postgres-storage-class.yaml
@@ -1,12 +1,11 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: azurefile-csi-nfs
-provisioner: file.csi.azure.com
-allowVolumeExpansion: true
+  name: azuredisk-premium-retain
+provisioner: kubernetes.io/azure-disk
+reclaimPolicy: Retain   # Retain or Delete
+volumeBindingMode: WaitForFirstConsumer   # WaitForFirstConsumer or Immediate
+allowVolumeExpansion: true    # true or false
 parameters:
-  protocol: nfs
-mountOptions:
-  - nconnect=4
-  - noresvport
-  - actimeo=30
+  storageaccounttype: Premium_LRS   # Premium or Standard
+  kind: Managed
