--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -2,30 +2,17 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   annotations:
-    pv.kubernetes.io/provisioned-by: file.csi.azure.com
-  name: us-chirpstack-postgres
+    pv.kubernetes.io/provisioned-by: disk.csi.azure.com
+  name: us-chirpstack-postgres-pv
 spec:
   capacity:
     storage: 4Gi
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: azurefile-csi-nfs
+  storageClassName: managed-csi
   csi:
-    driver: file.csi.azure.com
-    volumeHandle: "{PowerPlatform-IOTReporting-dev}#{usiotreportingdev}#{us-chirpstack-postgres}"
+    driver: disk.csi.azure.com
+    volumeHandle: /subscriptions/<subscriptionID>/resourceGroups/MC_PowerPlatform-IOTReporting-dev_US-IOTReporting-dev_eastus/providers/Microsoft.Compute/disks/us-chirpstack-postgres
     volumeAttributes:
-      resourceGroup: 
-      shareName: us-chirpstack-postgres
-    nodeStageSecretRef:
-      name: azure-secret
-      namespace: default
-  mountOptions:
-    - dir_mode=0750
-    - file_mode=0750
-    - uid=999
-    - gid=999
-    - mfsymlinks
-    - cache=strict
-    - nosharesock
-    - nobrl
+      fsType: ext4
