--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -69,12 +69,14 @@ spec:
             - mountPath: /var/run/postgresql
               name: writable-postgres-tmp
       volumes:
-      - name: us-chirpstack-postgres-pvc
-        persistentVolumeClaim:
-          claimName: us-chirpstack-postgres-pvc
+        - name: us-chirpstack-postgres
+          persistentVolumeClaim:
+            claimName: us-chirpstack-postgres-pvc
         - name: postgres-cm0
           configMap:
             name: postgres-cm0
         - name: postgres-cm1
           configMap:
             name: postgres-cm1
+        - name: writable-postgres-tmp
+          emptyDir: {}
