--- a/volumes/chirpstack-persistentvolumeclaim.yaml
+++ b/volumes/chirpstack-persistentvolumeclaim.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: chirpstack-cm1
-  namespace: default
+  name: us-chirpstack-chirpstack-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
-  storageClassName: default
+      storage: 4Gi
+  volumeName: us-chirpstack-chirpstack-pv
+  storageClassName: managed-csi
