--- a/volumes/nodered-persistentvolumeclaim.yaml
+++ b/volumes/nodered-persistentvolumeclaim.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: node-red-data-pvc
+  name: us-chirpstack-nodered-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 4Gi
+  volumeName: us-chirpstack-nodered-pv
+  storageClassName: managed-csi
