--- a/deployments/redis-deployment.yaml
+++ b/deployments/redis-deployment.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   annotations:
     kompose.cmd: kompose convert
@@ -12,8 +12,6 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: redis
-  strategy:
-    type: Recreate
   template:
     metadata:
       annotations:
@@ -38,8 +36,7 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: redisdata
-      restartPolicy: Always
       volumes:
         - name: redisdata
           persistentVolumeClaim:
-            claimName: redisdata
+            claimName: us-chirpstack-redis-pvc
