--- a/services/chirpstack-service.yaml
+++ b/services/chirpstack-service.yaml
@@ -1,18 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.34.0 (cbf2835db)
+  name: chirpstack
   labels:
     io.kompose.service: chirpstack
-  name: chirpstack
 spec:
-  type: LoadBalancer
-  loadBalancerIP: 4.157.230.39
+  type: ClusterIP  # Change from LoadBalancer to ClusterIP for internal communication
   ports:
     - name: "8080"
-      port: 8080
-      targetPort: 8080
+      port: 8080  # Service will expose port 8080
+      targetPort: 8080  # The pod's port to forward to
   selector:
-    io.kompose.service: chirpstack
+    io.kompose.service: chirpstack  # Make sure this selector matches the pods you want to route to
