--- a/ingress-rules/chirpstack-ingress.yaml
+++ b/ingress-rules/chirpstack-ingress.yaml
@@ -23,7 +23,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: chirpstack-ingress
-  namespace: chirpstack
+  namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "true"  # If using HTTPS
