--- a/ingress-nginx/nginx-ingress-controller.yaml
+++ b/ingress-nginx/nginx-ingress-controller.yaml
@@ -336,4 +336,4 @@ metadata:
   name: ingress-nginx-controller
   namespace: default
 spec:
-  externalTrafficPolicy: Local
+  externalTrafficPolicy: Cluster
