--- a/ingress-rules/chirpstack-ingress.yaml
+++ b/ingress-rules/chirpstack-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx  # Ensure this is the ingress class you're using
   rules:
-    - host: 4.157.230.39   # Use your external IP address or domain
+    - host: cpmfgopschirpstack.eastus.cloudapp.azure.com   # Use your external IP address or domain
       http:
         paths:
           - path: /
@@ -21,5 +21,5 @@ spec:
                   number: 8080
   tls:
     - hosts:
-        - 4.157.230.39  # Use your external IP or domain here
+        - cpmfgopschirpstack.eastus.cloudapp.azure.com  # Use your external IP or domain here
       secretName: chirpstack-tls-secret  # Refer to the TLS secret you already created
