--- a/ingress-nginx/nginx-ingress-controller.yaml
+++ b/ingress-nginx/nginx-ingress-controller.yaml
@@ -254,7 +254,7 @@ spec:
     spec:
       containers:
       - name: ingress-nginx-controller
-        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:1.12.0-beta.0
+        image: k8s.gcr.io/ingress-nginx/controller:v1.7.0
         ports:
         - containerPort: 80
         - containerPort: 443
