--- a/ingress-nginx/nginx-ingress-controller.yaml
+++ b/ingress-nginx/nginx-ingress-controller.yaml
@@ -258,6 +258,15 @@ spec:
         ports:
         - containerPort: 80
         - containerPort: 443
+        env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
         livenessProbe:
           httpGet:
             path: /healthz
