--- a/ingress-nginx/nginx-ingress-controller.yaml
+++ b/ingress-nginx/nginx-ingress-controller.yaml
@@ -211,6 +211,7 @@ metadata:
   name: ingress-nginx-controller
   namespace: default
 spec:
+  type: LoadBalancer
   ports:
   - name: http
     port: 80
