--- a/services/chirpstack-service.yaml
+++ b/services/chirpstack-service.yaml
@@ -8,7 +8,7 @@ metadata:
     io.kompose.service: chirpstack
   name: chirpstack
 spec:
-  type: ClusterIP  # This is the correct type for working with Ingress controllers
+  type: LoadBalancer  # Change to LoadBalancer for external access
   ports:
     - name: "8080"
       port: 8080
